--- a/source/photo.html
+++ b/source/photo.html
@@ -46,69 +46,90 @@
   <main class="page-main">
     <h1 class="visually-hidden">Фото и видео Седоны</h1>
 
-    <section class="photo-album">
-      <div class="photo-album__cover main-cover">
+    <section class="photo-video">
+      <div class="photo-video__cover main-cover">
         <img class="main-cover__inscription" src="img/text-sedona.svg" alt="Надпись Седона">
-      </div>
-      <div class="photo-album__description">
-        <h2 class="photo-album__title">Фото и видео</h2>
-        <p class="photo-album__text">Не можете решиться на путешествие из-за курса?
-          Фотографии помогут вам забыть о политике и экономике</p>
       </div>
     </section>
 
-    <section class="cards-section">
-
-      <div class="card vast-card">
-        <a href="img/photo-sunset-mobile@1x.jpg">
-          <img class="card__photo" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне">
-        </a>
-        <div class="vast-card__content">
-          <div>
-            <h3 class="card__title">Неродные просторы</h3>
-            <span class="card__author-name">Автор фото: Борис</span>
-          </div>
-          <div class="card__review">
-            <p class="card__like-count">1350</p>
-          </div>
-        </div>
+    <section class="album-section">
+      <div class="album-section__description">
+        <h2 class="album-section__title">Фото и видео</h2>
+        <p class="album-section__text">Не можете решиться на путешествие из-за курса?
+          Фотографии помогут вам забыть о политике и экономике</p>
       </div>
 
-      <div class="card plants-card">
-        <a href="img/photo-cactus-mobile@1x.jpg">
-          <img class="card__photo" src="img/photo-cactus-mobile@1x.jpg" alt="Фото кактуса">
-        </a>
-        <div class="plants-card__content">
-          <h3 class="card__title">Местная растительность</h3>
-          <span class="card__author-name">Автор фото: Сергей</span>
-          <div class="card__review">
-            <p class="card__like-count">143</p>
+      <div class="cards-section">
+
+        <!-- Секция неродные просторы -->
+        <div class="cards-section__square vast-card">
+          <div class="vast-card__photo">
+            <a href="img/photo-sunset-mobile@1x.jpg">
+              <img class="card-photo" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне">
+            </a>
+          </div>
+          <div class="vast-card__content">
+            <div class="vast-card__description">
+              <h3 class="vast-card__name card-title">Неродные просторы</h3>
+              <span class="vast-card__author card-author-name">Автор фото: Борис</span>
+            </div>
+            <div class="vast-card__review card-review">
+              <p class="like-count">1350</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card road-card">
-        <a href="img/photo-roads-mobile@1x.jpg">
-          <img class="card__photo" src="img/photo-roads-mobile@1x.jpg" alt="Фото дорога">
-        </a>
-        <div class="road-card__content">
-          <h3 class="card__title">Дорога на север</h3>
-          <span class="card__author-name">Автор фото: Петр</span>
-          <div class="card__review">
-            <p class="card__like-count">96</p>
+        <!-- Секция местная растительность -->
+        <div class="cards-section__square plants-card">
+          <div class="plants-card__photo">
+            <a href="img/photo-cactus-mobile@1x.jpg">
+              <img class="card-photo" src="img/photo-cactus-mobile@1x.jpg" alt="Фото кактуса">
+            </a>
+          </div>
+          <div class="plants-card__content">
+            <div class="plants-card__description">
+              <h3 class="plants-card__name card-title">Местная растительность</h3>
+              <span class="plants-card__author card-author-name">Автор фото: Сергей</span>
+            </div>
+            <div class="plants-card__review card-review">
+              <p class="like-count">143</p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card bridge-card">
-        <a href="img/main-bridge-mobile@1x.jpg">
-          <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола">
-        </a>
-        <div class="bridge-card__content">
-          <h3 class="card__title">Мост дьявола</h3>
-          <span class="card__author-name">Автор фото: Антон</span>
-          <div class="card__review">
-            <p class="card__like-count">254</p>
+        <!-- Секция дорога на север -->
+        <div class="cards-section__square road-card">
+          <div class="road-card__photo">
+            <a href="img/photo-roads-mobile@1x.jpg">
+              <img class="card__photo" src="img/photo-roads-mobile@1x.jpg" alt="Фото дорога">
+            </a>
+          </div>
+          <div class="road-card__content">
+            <div class="road-card__description">
+              <h3 class="road-card__name card-title">Дорога на север</h3>
+              <span class="road-card__author card-author-name">Автор фото: Петр</span>
+            </div>
+            <div class="road-card__review card-review">
+              <p class="like-count">96</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Секция мост дьявола -->
+        <div class="cards-section__square bridge-card">
+          <div class="bridge-card__photo">
+            <a href="img/main-bridge-mobile@1x.jpg">
+              <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола">
+            </a>
+          </div>
+          <div class="bridge-card__content">
+            <div class="bridge-card__description">
+              <h3 class="bridge-card__name card-title">Мост дьявола</h3>
+              <span class="bridge-card__author card-author-name">Автор фото: Антон</span>
+            </div>
+            <div class="bridge-card__review card-review">
+              <p class="like-count">254</p>
+            </div>
           </div>
         </div>
       </div>
